--- a/spec/dummy/Rakefile
+++ b/spec/dummy/Rakefile
@@ -3,5 +3,8 @@
 # for example lib/tasks/capistrano.rake, and they will automatically be available to Rake.
 
 require File.expand_path('../config/application', __FILE__)
+require 'bundler'
+Bundler.require
+require 'granted/tasks'
 
 Dummy::Application.load_tasks
