Add all_ method, add index to migration

--- a/spec/dummy/config/database.yml
+++ b/spec/dummy/config/database.yml
@@ -12,10 +12,11 @@ test:
   port: 3306
 
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql2
+  username: root
+  database: granted_development
+  host: localhost
+  port: 3306
 
 
 production:
