--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ before_script:
   - mysql -u travis -e 'create database granted_test;'
   - psql -c 'create database granted_test' -U postgres
 script:
-  - RAILS_ENV=test bundle exec rake db:migrate --trace
-  - bundle exec rake db:test:prepare
-  - bundle exec rspec spec
+  - cd spec/dummy && RAILS_ENV=test bundle exec rake db:migrate --trace
+  - cd spec/dummy && bundle exec rake db:test:prepare
+  - cd spec/dummy && bundle exec rspec spec
