--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ before_script:
 script:
   - cd spec/dummy && RAILS_ENV=test bundle exec rake db:migrate --trace
   - cd spec/dummy && bundle exec rake db:test:prepare
-  - cd spec/dummy && bundle exec rspec spec
+  - bundle exec rspec spec
