--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: ruby
 rvm:
   - "1.9.2"
   - "1.9.3"
-  - jruby-19mode
-  - rbx-19mode
+  
+  # Need to figure out the Gemfile and platforms
+  # - jruby-19mode
+  # - rbx-19mode
 env:
   - DB=mysql
   - DB=postgresql
